--- a/sourcecode/src/App.css
+++ b/sourcecode/src/App.css
@@ -97,3 +97,21 @@
 .form-container p {
   margin-top: 10px; /* Reduzierter Abstand */
 }
+
+.internal-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.internal-container nav ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  gap: 20px;
+}
+
+.internal-container nav ul li {
+  display: inline;
+}
